WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114833
REGRESSION (
r116645
): Versions app's UI is munged in HiDPI due to background-size being reset to 'auto' when background short-hand is also specified
https://bugs.webkit.org/show_bug.cgi?id=114833
Summary
REGRESSION (r116645): Versions app's UI is munged in HiDPI due to background-...
Andy Estes
Reported
2013-04-18 15:05:00 PDT
REGRESSION (
r116645
): Versions app's UI is munged in HiDPI due to background-size being reset to 'auto' when background short-hand is also specified
Attachments
Patch
(6.12 KB, patch)
2013-04-18 15:12 PDT
,
Andy Estes
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2013-04-18 15:06:08 PDT
<
rdar://problem/13614212
>
Andy Estes
Comment 2
2013-04-18 15:12:11 PDT
Created
attachment 198771
[details]
Patch
David Kilzer (:ddkilzer)
Comment 3
2013-04-18 16:27:02 PDT
Comment on
attachment 198771
[details]
Patch r=me
Andy Estes
Comment 4
2013-04-18 16:31:02 PDT
Committed
r148712
: <
http://trac.webkit.org/changeset/148712
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug