REGRESSION (r116645): Versions app's UI is munged in HiDPI due to background-size being reset to 'auto' when background short-hand is also specified https://bugs.webkit.org/show_bug.cgi?id=114833

Reviewed by David Kilzer.

Source/WebCore:

Added applicationIsVersions() to RuntimeApplicationChecks.

* WebCore.exp.in:
* platform/RuntimeApplicationChecks.cpp:
(WebCore::applicationIsVersions):
(WebCore):
* platform/RuntimeApplicationChecks.h:
(WebCore):

Source/WebKit/mac:

The Versions app specifies both a background-size and a background
shorthand CSS property, and its UI is broken after r116645 which resets
background-size to 'auto' if the background shorthand property is
specified.

This patch enables the useLegacyBackgroundSizeShorthandBehavior setting
added in r147034 to restore the expected behavior if the embedder is
Versions.app and it was linked against a version of WebKit that had the
legacy behavior.

* Misc/WebKitVersionChecks.h:
* WebView/WebView.mm:
(shouldUseLegacyBackgroundSizeShorthandBehavior):
(-[WebView _commonInitializationWithFrameName:groupName:]):

Canonical link: https://commits.webkit.org/133228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148712 268f45cc-cd09-0410-ab3c-d52691b4dbfc